--- a/index.html
+++ b/index.html
@@ -6,11 +6,120 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <title>World Cup 2022</title>
 </head>
 
 <body>
-    <h1>hak</h1>
+    <main>
+        <!-- slider section -->
+        <section class="container">
+            <div class="slider-section row">
+                <div class="text-column">
+                    <h1>The Greatest show on the earth</h1>
+                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                        classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <button class="slider-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></i></button>
+                </div>
+                <div class="image-column">
+                    <img src="assets/Banner Image.png" alt="Banner Image">
+                </div>
+            </div>
+        </section>
+
+        <!-- slider section end -->
+
+
+        <!-- blog section -->
+        <section class="container">
+            <div class="blog-section row">
+                <div class="left-column">
+                    <nav class="nav-bar">
+                        <ul>
+                            <li>
+                                <a href="">Upcoming Match</a>
+                            </li>
+                            <li>
+                                <a href="">All Group</a>
+                            </li>
+                            <li id="active">
+                                <a href="">Blog</a>
+                            </li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="right-column row">
+                    <article>
+                        <img src="assets/Blog Image.png" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/images.jpg" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/images2.jpg" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/images3.jpg" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/images2.jpg" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                    <article>
+                        <img src="assets/images4.jpg" alt="Blog Image">
+                        <div class="article-text">
+                            <button>Transfer</button>
+                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                            <div class="icon">
+                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                            </div>
+                        </div>
+                    </article>
+                </div>
+            </div>
+        </section>
+        <!-- blog section end -->
+    </main>
 
 </body>
 
