--- a/index.html
+++ b/index.html
@@ -120,6 +120,34 @@
         </section>
         <!-- blog section end -->
     </main>
+    <footer>
+        <div class="container">
+            <h2>Goal</h2>
+            <hr>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
+                    <li>
+                        <a href="#">Terms of Service</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy Policy</a>
+                    </li>
+                    <li>
+                        <a href="#">Privacy Settings</a>
+                    </li>
+                    <li>
+                        <a href="#">Goal App</a>
+                    </li>
+                    <li>
+                        <a href="#">Goal Live</a>
+                    </li>
+                </ul>
+            </nav>
+        </div>
+    </footer>
 
 </body>
 
