upcoming page design done

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                     <nav class="nav-bar">
                         <ul>
                             <li>
-                                <a href="">Upcoming Match</a>
+                                <a href="upcoming.html">Upcoming Match</a>
                             </li>
                             <li>
                                 <a href="">All Group</a>
@@ -120,6 +120,10 @@
         </section>
         <!-- blog section end -->
     </main>
+
+
+
+    <!-- Footer section -->
     <footer>
         <div class="container">
             <h2>Goal</h2>
@@ -148,6 +152,7 @@
             </nav>
         </div>
     </footer>
+    <!-- Footer section end-->
 
 </body>
 
