tab responsive done

--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
             <div class="slider-section row">
                 <div class="text-column">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    <p class="lg-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                        in a piece of
                         classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p class="md-text">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                     <button class="slider-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></i></button>
                 </div>
                 <div class="image-column">
@@ -48,73 +50,78 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="right-column row">
-                    <article>
-                        <img src="assets/Blog Image.png" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                <div class="right-column">
+                    <div class="main">
+                        <article>
+                            <img src="assets/Blog Image.png" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/images.jpg" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                        </article>
+                        <article>
+                            <img src="assets/images.jpg" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/images2.jpg" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                        </article>
+                        <article>
+                            <img src="assets/images2.jpg" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/images3.jpg" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                        </article>
+                        <article>
+                            <img src="assets/images3.jpg" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/images2.jpg" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                        </article>
+                        <article>
+                            <img src="assets/images2.jpg" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
-                    <article>
-                        <img src="assets/images4.jpg" alt="Blog Image">
-                        <div class="article-text">
-                            <button>Transfer</button>
-                            <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
-                            <div class="icon">
-                                <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
-                                <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                        </article>
+                        <article>
+                            <img src="assets/images4.jpg" alt="Blog Image">
+                            <div class="article-text">
+                                <button>Transfer</button>
+                                <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                                <div class="icon">
+                                    <span class="time"><i class="fa-regular fa-clock"></i> 10h</span>
+                                    <span class="comment"><i class="fa-regular fa-comment-dots"></i> 23</span>
+                                </div>
                             </div>
-                        </div>
-                    </article>
+                        </article>
+                    </div>
+                    <div class="button">
+                        <button class="md-button">View All</button>
+                    </div>
                 </div>
             </div>
         </section>
