--- a/upcoming.html
+++ b/upcoming.html
@@ -17,8 +17,10 @@
             <div class="slider-section row">
                 <div class="text-column">
                     <h1>The Greatest show on the earth</h1>
-                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
+                    <p class="lg-text">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots
+                        in a piece of
                         classical Latin literature from 45 BC, making it over 2000 years old.</p>
+                    <p class="md-text">Contrary to popular belief, Lorem Ipsum is not simply random text.</p>
                     <button class="slider-btn">Watch Live <i class="fa-solid fa-chevron-right"></i></i></button>
                 </div>
                 <div class="image-column">
@@ -48,60 +50,62 @@
                         </ul>
                     </nav>
                 </div>
-                <div class="right-column row">
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/Flag.png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/images (1).png" alt="Flag">
+                <div class="right-column">
+                    <div class="main">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/Flag.png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/images (1).png" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/images (2).png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/images (3).png" alt="Flag">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/images (2).png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/images (3).png" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/germany Flag.png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/images (1).png" alt="Flag">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/germany Flag.png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/images (1).png" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/images (3).png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/ScsKhm.jpg" alt="Flag">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/images (3).png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/ScsKhm.jpg" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/images.png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/images (2).png" alt="Flag">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/images.png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/images (2).png" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
-                    </div>
-                    <div class="content">
-                        <div class="team">
-                            <img src="assets/Flag.png" alt="Flag">
-                            <span>VS</span>
-                            <img src="assets/germany Flag.png" alt="Flag">
+                        <div class="content">
+                            <div class="team">
+                                <img src="assets/Flag.png" alt="Flag">
+                                <span>VS</span>
+                                <img src="assets/germany Flag.png" alt="Flag">
+                            </div>
+                            <h2>Germany VS France </h2>
+                            <p>April 01, 2023, 1.00 AM</p>
                         </div>
-                        <h2>Germany VS France </h2>
-                        <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
             </div>
