--- a/index.html
+++ b/index.html
@@ -157,6 +157,19 @@
                     </li>
                 </ul>
             </nav>
+            <div class="social">
+                <ul>
+                    <li>
+                        <a href="https://www.facebook.com/" target="_blank"><i class="fa-brands fa-facebook-f"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.twitter.com/" target="_blank"><i class="fa-brands fa-twitter"></i></a>
+                    </li>
+                    <li>
+                        <a href="https://www.instagram.com/" target="_blank"><i class="fa-brands fa-instagram"></i></a>
+                    </li>
+                </ul>
+            </div>
         </div>
     </footer>
     <!-- Footer section end-->
